[gd_scene load_steps=3 format=3 uid="uid://db5w6l5fod4wo"]

[ext_resource type="FontFile" uid="uid://eruvc81au5m0" path="res://assets/fonts/MinecraftRegular-Bmg3.otf" id="1_qdqgg"]
[ext_resource type="Script" uid="uid://cehvl0og2u7ja" path="res://scripts/popup_stat_line.gd" id="1_txld6"]

[node name="PopupStatLine" type="HBoxContainer"]
modulate = Color(0.458824, 0.976471, 0.298039, 1)
offset_right = 166.0
offset_bottom = 23.0
theme_override_constants/separation = 20
script = ExtResource("1_txld6")

[node name="StatName" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_qdqgg")
theme_override_font_sizes/font_size = 20
text = "Max Health:"

[node name="StatValue" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("1_qdqgg")
theme_override_font_sizes/font_size = 20
text = "+20"
